latency improvements
